[gd_scene load_steps=4 format=3 uid="uid://dcq2bby1ejk0i"]

[ext_resource type="Script" path="res://Components/Scripts/SceneManager.gd" id="1_meiq4"]
[ext_resource type="PackedScene" uid="uid://cgfh6w5nnxn4j" path="res://Characters/Scenes/player.tscn" id="2_n6hn4"]
[ext_resource type="PackedScene" uid="uid://d1j4bxvtltu7f" path="res://Components/Scenes/hud.tscn" id="3_mdvef"]

[node name="Main" type="Node"]

[node name="HUD" parent="." instance=ExtResource("3_mdvef")]

[node name="World" type="Node" parent="."]
script = ExtResource("1_meiq4")

[node name="Player" parent="World" instance=ExtResource("2_n6hn4")]

[connection signal="next_level" from="HUD" to="World" method="start_level"]
[connection signal="restart_level" from="HUD" to="World" method="restart_current_level"]
[connection signal="restart" from="World/Player" to="World" method="restart_current_level"]
